finished everything but test cases and itneraction

--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -17,8 +17,13 @@
   <script src="spec/blinkyDancerSpec.js"></script>
   <script src="src/dancer.js"></script>
   <script src="src/blinkyDancer.js"></script>
+      <script src="src/makeBlueDancer.js"></script>
+
 </head>
 <body>
 <div id="mocha"></div>
 </body>
 </html>
+
+
+ 
