--- a/dancefloor.html
+++ b/dancefloor.html
@@ -6,11 +6,19 @@
     <script src="lib/jquery.js"></script>
     <script src="src/dancer.js"></script>
     <script src="src/blinkyDancer.js"></script>
+    <script src="src/makeBlueDancer.js"></script>
+    <script src="src/growAndShrink.js"></script>
+    <script src="src/lineUp.js"></script>
   </head>
   <body>
     <div class="topbar">
       <span class="title">object dance party</span>
-      <a href="#" class="addDancerButton" data-dancer-maker-function-name="makeBlinkyDancer">add a blinky dancer</a>    </div>
+      <a href="#" class="addDancerButton" data-dancer-maker-function-name="makeBlinkyDancer">add a blinky dancer</a>   
+      <a href="#" class="addDancerButton" data-dancer-maker-function-name="makeBlueDancer">add a blue dancer</a>
+      <a href="#" class="addDancerButton" data-dancer-maker-function-name="makeDancerGrowandShrink">add a grow-and-shrink dancer</a>
+      <a href="#" class="lineUp">Line Up Dancers</a>
+    </div>
+      <!--<div class="dancer blue"> </div> -->
     <script src="src/init.js"></script>
   </body>
 </html>
