FINISHED BLINKY DANCER ~!!

--- a/SpecRunner.html
+++ b/SpecRunner.html
@@ -17,7 +17,8 @@
   <script src="spec/blinkyDancerSpec.js"></script>
   <script src="src/dancer.js"></script>
   <script src="src/blinkyDancer.js"></script>
-      <script src="src/makeBlueDancer.js"></script>
+  <script src="src/makeBlueDancer.js"></script>
+  <script src="src/growAndShrink.js"></script>
 
 </head>
 <body>
