--- a/dancefloor.html
+++ b/dancefloor.html
@@ -17,6 +17,7 @@
       <a href="#" class="addDancerButton" data-dancer-maker-function-name="makeBlueDancer">add a blue dancer</a>
       <a href="#" class="addDancerButton" data-dancer-maker-function-name="makeDancerGrowandShrink">add a grow-and-shrink dancer</a>
       <a href="#" class="lineUp">Line Up Dancers</a>
+      <a href="#" class="goToFirstDancer">go to first dancer</a>
     </div>
       <!--<div class="dancer blue"> </div> -->
     <script src="src/init.js"></script>
