--- a/dancefloor.html
+++ b/dancefloor.html
@@ -9,6 +9,9 @@
     <script src="src/makeBlueDancer.js"></script>
     <script src="src/growAndShrink.js"></script>
     <script src="src/lineUp.js"></script>
+    <!--<script src="https://raw.githubusercontent.com/processing-js/processing-js/v1.4.8/processing.js"></script>-->
+    <script src="p5/p5.js"></script>
+    <script src="p5/empty-example/sketch.js"></script>
   </head>
   <body>
     <div class="topbar">
